--- a/src/content/blog/2024-02-06-100daysofcode.md
+++ b/src/content/blog/2024-02-06-100daysofcode.md
@@ -1,6 +1,7 @@
 ---
 title: '#100DaysOfCode'
 pubDate: '2024-02-06T19:13:33-05:00'
+description: 'Lorem ipsum dolor sit amet'
 heroImage: >-
   /assets/blue-modern-illustrative-gaming-influencer-youtube-channel-art-2560-x-1100-px-1-.png
 ---
